# Trinity

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  _clang-format
dev/: CMakeLists.txt
dev/QtFrontend/: CMakeLists.txt  NetCommands.h  QtFrontend.pro  RendererOut.cpp  main.cpp  muicontroller.cpp  myglwidget.cpp  myglwidget.h  qtfrontendwindow.cpp  qtfrontendwindow.h  qtfrontendwindow.ui  renderlabel.h
dev/QtNetwork_client/: CMakeLists.txt  NetworkClient.pro  client.cpp  client.h  client.ui  main.cpp  myglwidget.h
dev/RenderDemo/: CMakeLists.txt
dev/renderdemo/: CMakeLists.txt  CMakeLists.txt~  main.cpp
dev/renderdemo_client/: CMakeLists.txt  main.cpp
dev/renderdemo_network/: CMakeLists.txt~  main.cpp
dev/renderprocess/: CMakeLists.txt  CommandReciever.cpp  CommandReciever.h  main.cpp
dev/renderprocessws/: CMakeLists.txt  CommandReciever.h
dev/renderservice/: CMakeLists.txt  CMakeLists.txt~  TuvokService.cpp  TuvokService.h  main.cpp
dev/renderservicews/: TuvokService.cpp  TuvokService.h
dev/websocketserver/: RoutedCommunicationService.cpp  WebsocketService.cpp  main.cpp  stdafx.h
ext/: CMakeLists.txt
ext/blosc/: CMakeLists.txt
ext/bzip2/: CMakeLists.txt
ext/c-blosc-1.8.1/: CMakeLists.txt
ext/libjpeg-turbo/: CMakeLists.txt
ext/libjpeg-turbo-1.4.2/: CMakeLists.txt
ext/lz4/: CMakeLists.txt
ext/lz4-new/: CMakeLists.txt
ext/lzma/: CMakeLists.txt
ext/zlib/: CMakeLists.txt  gzguts.h
src/: CMakeLists.txt
src/Core/: SilverBulletBase.h  StringTools.h  SystemInfo.cpp
src/IO/: BMinMax.cpp  BMinMax.h  Brick.h  BrickedDataset.h  DSFactory.h  Dataset.cpp  Dataset.h  DirectoryParser.h  DynamicBrickingDS.cpp  IDataIO.h  IOManager.cpp  IOManager.h  JPEGTool.h  License.h  Metadata.cpp  Metadata.h  NoneBrickedQvisIO.h  TransferFunction1D.cpp  TuvokIOError.h  TuvokJPEG.cpp  VGIHeaderParser.cpp  uvfMesh.h
src/Renderer/: ShaderDescriptor.cpp  ShaderDescriptor.h  VisibilityState.h
src/Tools/: DebugOutHandler.h
src/combined/: CMakeLists.txt  main.cpp
src/commands/: BrickMetaData.cpp  BrickMetaData.h  CMakeLists.txt  CommandInputChannel.cpp  CommandInputChannel.h  ErrorCommands.cpp  ErrorCommands.h  Factories.cpp  Factories.h  Grids.h  ICommand.cpp  ICommand.h  ICommandFactory.h  ICommandHandler.h  IOCommands.cpp  IOCommands.h  IOData.cpp  IOData.h  ISerialObject.h  ISerialObjectFactory.cpp  ISerialObjectFactory.h  ISerialReader.h  ISerialWriter.h  ISerializable.cpp  ISerializable.h  JsonObject.cpp  JsonObject.h  JsonReader.cpp  JsonReader.h  JsonWriter.cpp  JsonWriter.h  ProcessingCommands.cpp  ProcessingCommands.h  Reply.cpp  Reply.h  Request.cpp  Request.h  SerializerFactory.cpp  SerializerFactory.h  SimpleStringReader.cpp  (+11 more)
src/common/: AbstractNode.cpp  AbstractNode.h  AbstractSession.cpp  AbstractSession.h  CMakeLists.txt  CommandFactory.cpp  CommandFactory.h  CommandInputChannel.cpp  CommandInputChannel.h  Commands.cpp  Commands.h  Enums.h  ErrorCmd.cpp  ErrorCmd.h  ICommand.h  ICommandHandler.h  IIO.cpp  IIO.h  INode.cpp  INode.h  IONodeCmds.cpp  IONodeCmds.h  IONodeProxy.cpp  IONodeProxy.h  IOSessionProxy.cpp  IOSessionProxy.h  IProxy.h  IRenderer.cpp  IRenderer.h  IRenderer_old.h  ISerialObject.h  ISerialObjectFactory.cpp  ISerialObjectFactory.h  ISerializable.h  ISession.cpp  ISession.h  InitDummyRendererCmd.cpp  InitDummyRendererCmd.h  InitDummyRendererHdl.cpp  InitDummyRendererHdl.h  (+25 more)
src/communication/: CMakeLists.txt  CMakeLists.txt~  RenderService.cpp
src/core/: FileFinder.h
src/core2/: DetectEnv.h  StdTuvokDefines.h  TuvokException.h
src/frontend-base/: CMakeLists.txt  IONodeFrontendPrx.cpp  IONodeFrontendPrx.h  IONodePrx.cpp  IONodePrx.h  IRenderer_old.h  ProcessingNodeProxy.cpp  ProcessingNodeProxy.h  ProcessingNodePrx.cpp  ProcessingNodePrx.h  RendererProxy.cpp  RendererProxy.h  RendererPrx.cpp  RendererPrx.h  VisStreamReceiver.cpp  VisStreamReceiver.h  main.cpp
src/frontend-dummy/: CMakeLists.txt  ProcessingPrx.cpp  ProcessingPrx.h  RendererPrx.cpp  RendererPrx.h  main.cpp
src/frontend-exporter/: CMakeLists.txt  main.cpp
src/frontend-qt/: CMakeLists.txt  ConnectionWidget.h  ConnectionWidget.ui  IODataModel.cpp  IODataModel.h  MainWindow.cpp  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  TrinityDemo.pro  TrinityFrontend.pro  TrinityFrontend.pro.user.3c055f3  main.cpp  openglwidget.cpp  openglwidget.h  resources.qrc  stylesheet.css  window.cpp  window.h  window.ui
src/frontend-qt-waschk/: CMakeLists.txt  ConnectionSinglton.cpp  ConnectionSinglton.h  ConnectionWidget.cpp  ConnectionWidget.h  ConnectionWidget.ui  Connections.cpp  Connections.h  IODataModel.cpp  MainWindow.cpp  MainWindow.h  TrinityDemo.pro.user.04b4d8f  connectionSinglton.cpp  connectionSinglton.h  connectionsettings.cpp  connectionsettings.h  connectionsettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  stylesheet.css
src/frontend-web/: CMakeLists.txt  index.html
src/io-base/: CMakeLists.txt  DummyIO.cpp  DummyIO.h  FractalListData.cpp  FractalListData.h  IListData.h  IOCommandFactory.cpp  IOCommandFactory.h  IOCommandsHandler.cpp  IOCommandsHandler.h  IONode.cpp  IONode.h  IONodeCmdsHdl.cpp  IONodeCmdsHdl.h  IOSession.cpp  IOSession.h  IOSessionManager.h  IOSessionmanager.cpp  SimpleIOCmdsHdl.cpp  SimpleIOCmdsHdl.h  UVFListData.cpp  UVFListData.h  main.cpp
src/io-dummy/: CMakeLists.txt  main.cpp
src/io-fractal/: CMakeLists.txt  FractalIO.cpp  IOManager.h
src/jpeg/: CMakeLists.txt  JPEGDecoder.cpp  JPEGDecoder.h  JPEGEncoder.cpp  JPEGEncoder.h
src/opengl-base/: CMakeLists.txt  GLCommon.h  GLFrameBufferObject.cpp  GLFrameBufferObject.h  GLHashTable.cpp  GLHashTable.h  GLModel.cpp  GLModel.h  GLProgram.cpp  GLProgram.h  GLRenderPlane.cpp  GLRenderPlane.h  GLTargetBinder.cpp  GLTargetBinder.h  GLTexture.cpp  GLTexture.h  GLTexture1D.cpp  GLTexture2D.cpp  GLTexture3D.cpp  GLTexture3D.h  GLVolumeBox.cpp  GLVolumeBox.h  GLVolumePool.cpp  GLVolumePool.h  OpenGLError.cpp  OpenGLError.h  OpenGLincludes.h  OpenGlHeadlessContext.cpp  OpenGlHeadlessContext.h  ShaderDescriptor.cpp  (+3 more)
(+2045 files in other folders)
