FILE(GLOB COMMANDS_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB COMMANDS_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${COMMANDS_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${COMMANDS_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

ADD_LIBRARY(commands OBJECT ${COMMANDS_HEADER} ${COMMANDS_SOURCE})
