FILE(GLOB COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${COMMON_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${COMMON_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

ADD_LIBRARY(common OBJECT ${COMMON_HEADER} ${COMMON_SOURCE})
