FILE(GLOB FRONTENDDUMMY_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB FRONTENDDUMMY_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${FRONTENDDUMMY_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${FRONTENDDUMMY_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})


list(REMOVE_ITEM FRONTENDDUMMY_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

add_library(frontenddummylib OBJECT ${FRONTENDDUMMY_HEADER} ${FRONTENDDUMMY_SOURCE})

add_executable(frontenddummy 
				${CMAKE_CURRENT_LIST_DIR}/main.cpp
				${FRONTENDDUMMY_HEADER} 
				${FRONTENDDUMMY_SOURCE}
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>)

IF (WIN32)
	TARGET_LINK_LIBRARIES(frontenddummy Shlwapi.lib)
ENDIF ()

SET_TARGET_PROPERTIES(frontenddummy PROPERTIES FOLDER "dummy")
SET_TARGET_PROPERTIES(frontenddummy PROPERTIES FOLDER "dummy")
