file(GLOB TRINITYEXPORTER_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB TRINITYEXPORTER_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)


CreateSourceGroups("${TRINITYEXPORTER_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${TRINITYEXPORTER_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

add_executable(frontendexporter
			${TRINITYEXPORTER_SOURCE} 
			${TRINITYEXPORTER_HEADER} 
			${TRINITYEXPORTER_RES}
			$<TARGET_OBJECTS:mocca>
			$<TARGET_OBJECTS:common>
			$<TARGET_OBJECTS:commands>
			$<TARGET_OBJECTS:silverbullet>
			$<TARGET_OBJECTS:frontendbaselib>
		   	$<TARGET_OBJECTS:tripeg>)

IF (WIN32)
	TARGET_LINK_LIBRARIES(frontendexporter Shlwapi.lib)
ENDIF ()

TARGET_LINK_LIBRARIES(frontendexporter turbojpeg-static)
TARGET_LINK_LIBRARIES(frontendexporter blosc_static)

SET_TARGET_PROPERTIES(frontendexporter PROPERTIES FOLDER "trinity")