FILE(GLOB IOBASE_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB IOBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${IOBASE_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${IOBASE_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})



list(REMOVE_ITEM IOBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

add_library(iobaselib OBJECT ${IOBASE_HEADER} ${IOBASE_SOURCE})

add_executable(iobase 
				${CMAKE_CURRENT_LIST_DIR}/main.cpp
				${IOBASE_HEADER} 
				${IOBASE_SOURCE}
				$<TARGET_OBJECTS:common>
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>)

IF (WIN32)
	TARGET_LINK_LIBRARIES(iobase Shlwapi.lib)
ENDIF ()
				
SET_TARGET_PROPERTIES(iobase PROPERTIES FOLDER "base")
SET_TARGET_PROPERTIES(iobaselib PROPERTIES FOLDER "lib")
