FILE(GLOB IODUMMY_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB IODUMMY_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${IODUMMY_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${IODUMMY_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})



add_executable(iodummy ${IODUMMY_HEADER} ${IODUMMY_SOURCE}
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>)


SET_TARGET_PROPERTIES(iodummy PROPERTIES FOLDER "dummy")
SET_TARGET_PROPERTIES(iodummy PROPERTIES FOLDER "dummy")
