FILE(GLOB IODUMMY_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB IODUMMY_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${IODUMMY_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${IODUMMY_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})



list(REMOVE_ITEM IODUMMY_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

# add_library(iodummylib OBJECT ${IODUMMY_HEADER} ${IODUMMY_SOURCE})

add_executable(iodummy 
				${CMAKE_CURRENT_LIST_DIR}/main.cpp
				${IODUMMY_HEADER} 
				${IODUMMY_SOURCE}
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>)

IF (WIN32)
	TARGET_LINK_LIBRARIES(iodummy Shlwapi.lib)
ENDIF ()
				
SET_TARGET_PROPERTIES(iodummy PROPERTIES FOLDER "dummy")
SET_TARGET_PROPERTIES(iodummy PROPERTIES FOLDER "dummy")
