FILE(GLOB IOFRACTAL_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB IOFRACTAL_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${IOFRACTAL_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${IOFRACTAL_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

LIST(REMOVE_ITEM IOFRACTAL_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

ADD_LIBRARY(iofractal OBJECT ${IOFRACTAL_HEADER} ${IOFRACTAL_SOURCE})


add_executable(iofracalmain ${CMAKE_CURRENT_LIST_DIR}/main.cpp
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>
				${CMAKE_CURRENT_LIST_DIR}/main.cpp)

IF (WIN32)
	TARGET_LINK_LIBRARIES(iofracalmain Shlwapi.lib)
ENDIF ()
				
SET_TARGET_PROPERTIES(iofractal PROPERTIES FOLDER "iofractal")
SET_TARGET_PROPERTIES(iofracalmain PROPERTIES FOLDER "iofractal")
