FILE(GLOB OPENGLBASE_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h
			    ${CMAKE_CURRENT_LIST_DIR}/GL/*.h)
FILE(GLOB OPENGLBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp
			    ${CMAKE_CURRENT_LIST_DIR}/GL/*.c)

IF(APPLE)
	list(REMOVE_ITEM OPENGLBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/GL/glew.c)
ENDIF(APPLE)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/GL)

CreateSourceGroups("${OPENGLBASE_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${OPENGLBASE_HEADER}" ${CMAKE_CURRENT_LIST_DIR})

IF (UNIX)
IF (!APPLE)
find_package(EGL REQUIRED)
ENDIF ()
ENDIF ()

ADD_LIBRARY(opengl-base OBJECT ${OPENGLBASE_SOURCE} ${OPENGLBASE_HEADER})
#TARGET_LINK_LIBRARIES(opengl-base ${EGL_LIBRARIES})
