FILE(GLOB PROCESSINGBASE_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h)
FILE(GLOB PROCESSINGBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp)

CreateSourceGroups("${PROCESSINGBASE_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${PROCESSINGBASE_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

list(REMOVE_ITEM PROCESSINGBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

add_library(processingbaselib OBJECT ${PROCESSINGBASE_HEADER} ${PROCESSINGBASE_SOURCE})

add_executable(processingbase 
				${CMAKE_CURRENT_LIST_DIR}/main.cpp
				${PROCESSINGBASE_HEADER} 
				${PROCESSINGBASE_SOURCE}
				$<TARGET_OBJECTS:common>
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>)

IF (WIN32)
	TARGET_LINK_LIBRARIES(processingbase Shlwapi.lib)
ENDIF ()

SET_TARGET_PROPERTIES(processingbase PROPERTIES FOLDER "base")
SET_TARGET_PROPERTIES(processingbase PROPERTIES FOLDER "base")
