FILE(GLOB PROCESSINGBASE_HEADER ${CMAKE_CURRENT_LIST_DIR}/*.h
								${CMAKE_CURRENT_LIST_DIR}/gridleaper/*.h)
FILE(GLOB PROCESSINGBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/*.cpp
								${CMAKE_CURRENT_LIST_DIR}/gridleaper/*.cpp)

find_package(OpenGL REQUIRED)

CreateSourceGroups("${PROCESSINGBASE_HEADER}" ${CMAKE_CURRENT_LIST_DIR})
CreateSourceGroups("${PROCESSINGBASE_SOURCE}" ${CMAKE_CURRENT_LIST_DIR})

list(REMOVE_ITEM PROCESSINGBASE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/main.cpp)

add_library(processingbaselib OBJECT ${PROCESSINGBASE_HEADER} ${PROCESSINGBASE_SOURCE})

add_executable(processingbase 
				${CMAKE_CURRENT_LIST_DIR}/main.cpp
				${PROCESSINGBASE_HEADER} 
				${PROCESSINGBASE_SOURCE}
				$<TARGET_OBJECTS:common>
				$<TARGET_OBJECTS:commands>
				$<TARGET_OBJECTS:mocca>
				$<TARGET_OBJECTS:silverbullet>
				$<TARGET_OBJECTS:jsoncpp>
				$<TARGET_OBJECTS:opengl-base>)
file(GLOB SHADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.glsl)

TARGET_LINK_LIBRARIES(processingbase ${OPENGL_LIBRARIES})
IF (UNIX AND NOT APPLE)
	TARGET_LINK_LIBRARIES(processingbase EGL ${CMAKE_DL_LIBS})
ENDIF()

IF (WIN32)
	TARGET_LINK_LIBRARIES(processingbase Shlwapi.lib)
ENDIF ()

SET_TARGET_PROPERTIES(processingbase PROPERTIES FOLDER "trinity")
SET_TARGET_PROPERTIES(processingbaselib PROPERTIES FOLDER "lib")
